[package]
name = "ark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "2"
base64 = "0.22"
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
getrandom = "0.2"
time = { version = "0.3", features = ["formatting"] }
aes-gcm = "0.10"
xattr = "1"

[profile.release]
opt-level = 3
