[package]
name = "ark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ark"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
getrandom = "0.2"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
xattr = "1"

[profile.release]
opt-level = 3
